--- a/login/index.html
+++ b/login/index.html
@@ -6,13 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class = "backBlock">
-        <div class = "loginBlock"></div>
-
+        <div class = "loginBlock">
+            <h1>로그인</h1><br>
+            <input type = "text" placeholder="이메일 주소 또는 전화번호"><br><br>
+            <input type="text" placeholder="비밀번호"><br><br><br><br>
+            <div class = "loginRedBlock">로그인</div><br>
+            <input type="checkbox" class = "loginCheck">로그인 정보 저장
+        </div>
+        <img src="/image/netflixLogo.png" alt="netflixLogo" class = "netflixLogo">
     </div>
-    
-    <!-- <h1>Twitch에 로그인</h1> -->
 </body>
 </html>
