--- a/login/index.html
+++ b/login/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <div class = "backBlock">
+    <img src="/image/netflixLogo.png" alt="netflixLogo" class = "netflixLogo">
         <div class = "loginBlock">
             <h1>로그인</h1><br>
             <input type = "text" placeholder="이메일 주소 또는 전화번호"><br><br>
             <input type="text" placeholder="비밀번호"><br><br><br><br>
             <div class = "loginRedBlock">로그인</div><br>
-            <input type="checkbox" class = "loginCheck">로그인 정보 저장
+            <input type="checkbox" id = "check"><label for = "check">로그인 정보 저장</label>
         </div>
-        <img src="/image/netflixLogo.png" alt="netflixLogo" class = "netflixLogo">
     </div>
 </body>
 </html>
