--- a/login/index.html
+++ b/login/index.html
@@ -12,13 +12,15 @@
 </head>
 <body>
     <div class = "backBlock">
-    <img src="/image/netflixLogo.png" alt="netflixLogo" class = "netflixLogo">
+    <a href="index.html"><img src="/image/netflixLogo.png" alt="netflixLogo" class = "netflixLogo"></a>
         <div class = "loginBlock">
             <h1>로그인</h1><br>
             <input type = "text" placeholder="이메일 주소 또는 전화번호"><br><br>
-            <input type="text" placeholder="비밀번호"><br><br><br><br>
-            <div class = "loginRedBlock">로그인</div><br>
-            <input type="checkbox" id = "check"><label for = "check">로그인 정보 저장</label>
+            <input type="password" placeholder="비밀번호"><br><br><br><br>
+            <a href="index.html" style="text-decoration: none;"><div class = "loginRedBlock">로그인</div></a>
+            <div style="float: left;"><input type="checkbox" id = "check"><label for = "check"><h6>로그인 정보 저장</h6></label></div>
+            <div style="float: left; padding-left: 80px; margin-top: -8px;"><a href="index.html" class = "helpText"><h6>도움이 필요하신가요?</h6></a></div>
+            <div><img><h6>Facebook으로 로그인</h6></div>
         </div>
     </div>
 </body>
